# cpp_compile_prtc

./: .bazelrc  .gitignore  LICENSE  README.md
scripts/: 002-simple.sh  initialize.sh
src/: BUILD
src/002-simple/: BUILD.bazel  function.c  main.c
